Finished requirements for the sprint. Pushing to ensure I've got it covered before going back to refactor code, spot-check, and attempt stretch challenges.

--- a/css/index.css
+++ b/css/index.css
@@ -12,10 +12,10 @@
 @media (max-width: 500px) {
   .btn {
     width: 100%;
-    height: 25%;
+    height: 5rem;
     background-color: black;
     border: none;
-    border-radius: 0.6srem;
+    border-radius: 0.5rem;
     color: white;
     font-size: 1.6rem;
     font-family: "Ubuntu";
@@ -29,7 +29,6 @@
   transition-duration: 0.3s;
 }
 .centered {
-  width: 80%;
   margin: 0 auto;
   justify-content: center;
   align-items: center;
@@ -196,6 +195,32 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.header-nav {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  font-size: 1.6rem;
+}
+@media (max-width: 500px) {
+  .header-nav {
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: center;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.header-nav a {
+  color: black;
+  text-decoration: none;
+  font-size: 1.6rem;
+  padding: 1rem;
+}
+.header-nav a:hover {
+  font-size: 1.8rem;
+  transition-duration: 0.2s;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -217,11 +242,28 @@ footer {
   flex-wrap: wrap;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images {
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 90%;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -239,8 +281,19 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    margin-top: 3rem;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -252,22 +305,60 @@ footer {
   width: 46%;
   margin-left: 4%;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 1.8rem;
+  }
+}
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
 }
 h1 {
-  font-size: 4rem;
-  margin-bottom: 1rem;
+  font-size: 4.5rem;
+  margin-bottom: 1.2rem;
+  margin-top: 1.2rem;
+}
+@media (max-width: 500px) {
+  h1 {
+    font-size: 3.5rem;
+  }
 }
 .header-bar {
   display: flex;
   flex-direction: column;
   width: 100%;
-  border: 3px solid black;
-  width: 80%;
   margin: 0 auto;
   justify-content: center;
   align-items: center;
+}
+.header-img {
+  width: 100%;
+  border-radius: 1.5rem;
+}
+@media (max-width: 500px) {
+  .site-container {
+    width: 90%;
+  }
+}
+@media (max-width: 500px) {
+  .blast {
+    display: flex;
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .sky {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .launch {
+    display: none;
+  }
 }
