--- a/less/home-page.less
+++ b/less/home-page.less
@@ -19,11 +19,22 @@
     flex-wrap: wrap;
     width: 100%;
 
+    @media @mobile {
+      width: 100%;
+      .centered();
+    }
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @mobile {
+        width: 90%;
+        .centered();
+        margin-top: 2rem,
+      }
     }
   }
 
@@ -46,8 +57,17 @@
     display: flex;
     justify-content: center;
 
+    @media @mobile {
+      flex-direction: column-reverse;
+      margin-top: 3rem;
+    }
+
     .walk-text {
       width: 50%;
+
+        @media @mobile {
+          width: 100%;
+        }
 
       h3 {
         margin-bottom: 10px;
@@ -62,6 +82,12 @@
       width: 46%;
       margin-left: 4%;
 
+      @media @mobile {
+        .centered();
+        width: 100%;
+        margin-bottom: 1.8rem;
+      }
+
       img {
         width: 100%;
         height: auto;
@@ -74,8 +100,13 @@
 // home
 
 h1 {
-  font-size: 4rem;
-  margin-bottom: 1rem;
+  font-size: 4.5rem;
+  margin-bottom: 1.2rem;
+  margin-top: 1.2rem;
+
+  @media @mobile {
+    font-size: 3.5rem;
+  }
 }
 
 
@@ -84,6 +115,35 @@ h1 {
   display: flex;
   flex-direction: column;
   width: 100%;
-  border: 3px solid black;
   .centered();
+}
+
+.header-img {
+  width: 100%;
+  border-radius: 1.5rem;
+}
+
+.site-container {
+  @media @mobile {
+    width: 90%;
+  }
+}
+
+.blast {
+  @media @mobile {
+    display: flex;
+    width: 100%;
+  }
+}
+
+.sky {
+  @media @mobile {
+    display: none;
+  }
+}
+
+.launch {
+  @media @mobile {
+    display: none;
+  }
 }
