--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,29 @@
 // Navigation code here
+
+.header-nav {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    font-size: 1.6rem;
+
+    @media @mobile {
+        flex-direction: row;
+        justify-content: space-around;
+        text-align: center;
+        .centered();
+
+    }
+
+    & a {
+        color: black;
+        text-decoration: none;
+        font-size: 1.6rem;
+        padding: 1rem;
+
+        &:hover {
+            font-size: 1.8rem;
+            transition-duration: 0.2s;
+        }
+    }
+
+}
